--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,6 +6,9 @@ jobs:
       - image: cimg/node:16.13.2
     steps:
       - checkout
+      - run:
+          name: Run lint with Prettier
+          command: npx prettier --write .
       - restore_cache:
           key: dependency-cache-{{ checksum "yarn.lock" }}
       - run:
