--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "eslint-config-react-app": "^7.0.1",
     "firebase": "^9.8.1",
     "netlify-cli": "^10.3.1",
     "react": "^18.1.0",
