--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,10 +7,7 @@ jobs:
     steps:
       - checkout
       - run:
-          name: Lint files
-          command: yarn eslint .
-      - run:
-          name: Format code with Prettier
+          name: Run lint with Prettier
           command: npx prettier --write .
       - restore_cache:
           key: dependency-cache-{{ checksum "yarn.lock" }}
