--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "eslint-config-prettier": "^8.5.0",
     "firebase": "^9.8.1",
     "netlify-cli": "^10.3.1",
     "react": "^18.1.0",
@@ -50,6 +51,10 @@
     ]
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.25.0",
+    "@typescript-eslint/parser": "^5.25.0",
+    "eslint": "^8.16.0",
+    "eslint-plugin-react": "^7.30.0",
     "prettier": "^2.6.2"
   }
 }
