--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@typescript-eslint/parser": "^5.25.0",
     "eslint": "^8.16.0",
     "eslint-plugin-react": "^7.30.0",
-    "prettier": "^2.6.2"
+    "prettier": "^2.6.2",
+    "eslint-config-react-app": "^7.0.1"
   }
 }
