--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "^18.0.0",
     "eslint-config-prettier": "^8.5.0",
     "firebase": "^9.8.1",
+    "moment": "^2.29.3",
     "netlify-cli": "^10.3.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
@@ -54,8 +55,8 @@
     "@typescript-eslint/eslint-plugin": "^5.25.0",
     "@typescript-eslint/parser": "^5.25.0",
     "eslint": "^8.16.0",
+    "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-react": "^7.30.0",
-    "prettier": "^2.6.2",
-    "eslint-config-react-app": "^7.0.1"
+    "prettier": "^2.6.2"
   }
 }
