--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.8.0",
     "@mui/material": "^5.8.0",
     "@mui/styled-engine-sc": "^5.8.0",
@@ -17,6 +19,7 @@
     "@types/react-dom": "^18.0.0",
     "eslint-config-prettier": "^8.5.0",
     "firebase": "^9.8.1",
+    "material-ui-search-bar": "^1.0.0",
     "moment": "^2.29.3",
     "netlify-cli": "^10.3.1",
     "react": "^18.1.0",
