--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "axios": "^0.27.2",
     "eslint-config-prettier": "^8.5.0",
     "firebase": "^9.8.1",
     "material-ui-search-bar": "^1.0.0",
