--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.5",
     "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "webpack": "^5.72.1"
   },
   "scripts": {
     "start": "react-scripts start",
