--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "@types/jest": "^27.0.1",
+    "@types/lodash": "^4.14.182",
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "axios": "^0.27.2",
     "eslint-config-prettier": "^8.5.0",
     "firebase": "^9.8.1",
+    "lodash": "^4.17.21",
     "material-ui-search-bar": "^1.0.0",
     "moment": "^2.29.3",
     "netlify-cli": "^10.3.1",
