--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "netlify-cli": "^10.3.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-media-recorder": "^1.6.6",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.5",
