--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@mui/icons-material": "^5.8.0",
     "@mui/material": "^5.8.0",
     "@mui/styled-engine-sc": "^5.8.0",
+    "@tensorflow-models/qna": "^1.0.1",
+    "@tensorflow/tfjs": "^3.18.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -31,6 +33,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.5",
+    "tensorflow-models": "^0.0.1",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0",
     "webpack": "^5.72.1"
