--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "axios": "^0.27.2",
+    "buffer": "^6.0.3",
     "eslint-config-prettier": "^8.5.0",
     "firebase": "^9.8.1",
     "lodash": "^4.17.21",
@@ -34,6 +35,7 @@
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.5",
     "tensorflow-models": "^0.0.1",
+    "ts-ebml": "^2.0.2",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0",
     "webpack": "^5.72.1"
